Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -145,22 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<scipy.stats._distn_infrastructure.rv_frozen at 0x7f98c8154748>"
+       "178.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "male_height."
+    "male_height.mean()"
    ]
   },
   {
